Removing changes made in Issue #2893510 by thejimbirch: Inserting an even column within an uneven column creates uneven column

--- a/less/bootstrap-paragraphs.less
+++ b/less/bootstrap-paragraphs.less
@@ -331,7 +331,7 @@
 /* Two Uneven Columns Paragraph. */
 /* .paragraph--bp-columns-two-uneven.html.twig */
 .paragraph--type--bp-columns-two-uneven {
-  > &.paragraph--style--75-25 {
+  &.paragraph--style--75-25 {
     .paragraph--type--bp-columns__2col:nth-of-type(1) {
       .make-sm-column(9);
     }
@@ -340,7 +340,7 @@
     }
   }
 
-  > &.paragraph--style--66-33 {
+  &.paragraph--style--66-33 {
     .paragraph--type--bp-columns__2col:nth-of-type(1) {
       .make-sm-column(8);
     }
@@ -349,7 +349,7 @@
     }
   }
 
-  > &.paragraph--style--25-75 {
+  &.paragraph--style--25-75 {
     .paragraph--type--bp-columns__2col:nth-of-type(1) {
       .make-sm-column(3);
     }
@@ -358,7 +358,7 @@
     }
   }
 
-  > &.paragraph--style--33-66 {
+  &.paragraph--style--33-66 {
     .paragraph--type--bp-columns__2col:nth-of-type(1) {
       .make-sm-column(4);
     }
@@ -371,7 +371,7 @@
 /* Three Uneven Columns Paragraph. */
 /* .paragraph--bp-columns-three-uneven.html.twig */
 .paragraph--type--bp-columns-three-uneven {
-  > &.paragraph--style--25-50-25 {
+  &.paragraph--style--25-50-25 {
     .paragraph--type--bp-columns__3col:nth-of-type(1) {
       .make-sm-column(3);
     }
@@ -383,7 +383,7 @@
     }
   }
 
-  > &.paragraph--style--50-25-25 {
+  &.paragraph--style--50-25-25 {
     .paragraph--type--bp-columns__3col:nth-of-type(1) {
       .make-sm-column(6);
     }
@@ -395,7 +395,7 @@
     }
   }
 
-  > &.paragraph--style--25-25-50 {
+  &.paragraph--style--25-25-50 {
     .paragraph--type--bp-columns__3col:nth-of-type(1) {
       .make-sm-column(3);
     }
@@ -407,7 +407,7 @@
     }
   }
 
-  > &.paragraph--style--16-66-16 {
+  &.paragraph--style--16-66-16 {
     .paragraph--type--bp-columns__3col:nth-of-type(1) {
       .make-sm-column(2);
     }
@@ -419,7 +419,7 @@
     }
   }
 
-  > &.paragraph--style--66-16-16 {
+  &.paragraph--style--66-16-16 {
     .paragraph--type--bp-columns__3col:nth-of-type(1) {
       .make-sm-column(8);
     }
@@ -431,7 +431,7 @@
     }
   }
 
-  > &.paragraph--style--16-16-66 {
+  &.paragraph--style--16-16-66 {
     .paragraph--type--bp-columns__3col:nth-of-type(1) {
       .make-sm-column(2);
     }
